<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.admin.weatherapp.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBackground"
        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextAppearance="@style/Toolbar.Title" />

    <pl.droidsonroids.gif.GifImageView
    android:id="@+id/imageIcon"
        android:layout_width="wrap_content"
        android:layout_height="405dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/weather_rainy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.155"
         />



    <TextView
        android:id="@+id/textviewCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textSize="30sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"/>
    <TextView
        android:id="@+id/textviewCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/country"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewCity"
        />


    <TextView
        android:id="@+id/textviewTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/_26_c"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.582"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="29sp"
        android:text="@string/clouds"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:id="@+id/textviewStatus"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewTemp"
        app:layout_constraintVertical_bias="0.004"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="29sp"
        android:id="@+id/textviewDay"
        android:text="@string/update_day"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewStatus"
        app:layout_constraintVertical_bias="0.004"
        />

    <GridLayout
        android:id="@+id/sub_weathers_layout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="0dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorBackgroud2"
        android:columnCount="3"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imgageviewHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_drizzle"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:contentDescription="@string/humidityDes" />

            <ImageView
                android:id="@+id/imageviewCloud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_clouds"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:contentDescription="@string/cloudDes" />

            <ImageView
                android:id="@+id/imgaeviewWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_windy"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:contentDescription="@string/windDes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textviewHumidity"
                android:text="@string/humidity"
                android:layout_columnWeight="1"
                android:layout_gravity="top"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textviewCloud"
                android:text="@string/cloud"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_columnWeight="1"
                android:layout_gravity="top"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textviewWind"
                android:text="@string/wind"
                android:layout_columnWeight="1"
                android:layout_gravity="top"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
    </GridLayout>
</android.support.constraint.ConstraintLayout>
